--- a/style.css
+++ b/style.css
@@ -470,14 +470,14 @@ table, th, tr, td{
   /*display: flex;*/
   /*margin-left: auto;
   margin-right: auto;*/
-  font-size: .7rem;
+  font-size: .9rem;
     
 }
 table{
   border: 2px solid var(--clr-dark);
   border-radius: 5px;
   margin-bottom: 1rem;
-  background-color: rgba(90, 90, 93, 0.512);
+  background-color: rgba(159, 159, 164, 0.512);
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -644,7 +644,7 @@ footer {
   outline:none;
   padding-left:25px;
   font-weight: 500;
-  color: var(--clr-violet);
+  color: black;
   border-radius: 50px;
 }
 .contact-left textarea{
@@ -657,7 +657,7 @@ footer {
 }
 /* intake page-intake page-intake page intake page- intake page march 25th 2024*/
 .intake-container{
-  height:670vh;
+  height:692vh;
   display: block;
   flex-direction: column;
   align-items: center;
@@ -704,7 +704,7 @@ footer {
   padding-left:25px;
   padding-right: 1px;
   font-weight: 200;
-  color: var(--clr-dark);
+  color: black;
   border-radius:25px;
 
 }
@@ -721,6 +721,11 @@ footer {
   background-image: radial-gradient(whitesmoke, #0f0d0d);
   padding: 10px 5px 10px 5px;
   
+}
+::placeholder{
+  color:black;
+  opacity: 1;
+  font-weight: bold;
 }
 .intake-info-1{
   flex-direction: row;
@@ -791,8 +796,10 @@ footer {
   width:65vw;
   text-align: left;
   margin-top: 2rem;
-  background-color: #3a3b3f;
-  color: #939497;
+  background-color: #c8cbd8;
+  color: black;
+  font-weight: bold;
+  opacity: 1;
   display: flexbox;
   position: relative;
 
@@ -809,6 +816,8 @@ figcaption{
 
 table{
   font-size: 18px;
+  color: black;
+  opacity: 1;
 }
 #btn-intk{
   display: block;
@@ -940,7 +949,13 @@ table{
     font-size: 22px;
   }
   .intake-container{
-    height:612vh;
+    height:650vh;
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    /*border:2px solid red;*/
+
   }
   
 }
@@ -1021,7 +1036,7 @@ table{
     outline:none;
     padding-left:25px;
     font-weight: 500;
-    color: var(--clr-violet);
+    color: black;
     border-radius: 50px;
   }
   .contact-left textarea{
@@ -1090,7 +1105,7 @@ table{
     margin-top: 1rem;
   }
   .intake-container{
-    height: 530vh;
+    height: 585vh;
   }
 }
 
@@ -1155,7 +1170,7 @@ table{
     
   }
   .intake-container{
-    height: 500vh;
+    height: 525vh;
   }
 
 }
@@ -1164,6 +1179,9 @@ table{
 @media screen and (min-width: 1200px) {
   .card {
     width: min(calc(33% - 1rem), 500px);
+  }
+  .intake-container{
+    height: 250vh;
   }
 }
 
